# slideshow

./: README.md  main.py  pyproject.toml  sample.config.json
tests/: test_config.py  test_ffmpeg.py  test_models.py
video/: build.py  config.py  ffmpeg.py  models.py  title_slide.py  tts.py
